k8s/azure/40-drive-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drive-frontend
  namespace: splitttr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drive-frontend
  template:
    metadata:
      labels:
        app: drive-frontend
    spec:
      containers:
        - name: drive-frontend
          image: <ACR_LOGIN_SERVER>/drive-frontend:1
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: drive-frontend
  namespace: splitttr
spec:
  selector:
    app: drive-frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
